plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'

    id "org.springdoc.openapi-gradle-plugin" version "1.8.0"

}

group = 'edu.agh.dean'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.modelmapper:modelmapper:3.2.0'


    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.3'
    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.1.Final'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

    implementation 'org.springframework.boot:spring-boot-starter-security'


    testImplementation 'com.h2database:h2'




    runtimeOnly('com.mysql:mysql-connector-j')
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

}

tasks.named('test') {
    useJUnitPlatform()
}
